# WHUChat

./: .env  .gitignore  LICENSE  README-backend.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.mts
.github/workflows/: codeql.yml
.history/src/components/: Conversation_20250519232423.vue  Conversation_20250519235051.vue  Conversation_20250519235123.vue  Conversation_20250519235149.vue  Conversation_20250519235153.vue  Conversation_20250519235222.vue  Conversation_20250522201526.vue  Conversation_20250522203239.vue  SettingsDialog_20250519211549.vue  (+22 more)
WHUChat-frontend/: .env  .gitignore  __unconfig_vite.config.mts  package-lock.json  package.json  tsconfig.json  vite.config.mts
WHUChat-frontend/src/: components.d.ts  main.ts  typed-router.d.ts
WHUChat-main/: README.md
WHUChat-main/WHUChat-frontend/: .gitignore  directoryList.md  package-lock.json  vite.config.mts.timestamp-1744950543818-b6db7151ffdc2.mjs
backend/: .gitignore
backend/gate_server/: CMakeLists.txt
backend/gate_server/resources/: config.json
backend/gate_server/source/: config_mgr.cpp  logic_mgr.cpp  main.cpp
backend/gate_server/source/include/: asio_iocontext_pool.cpp  asio_iocontext_pool.hpp  config_mgr.hpp  fmt_test.h  singleton.hpp
data/: data.json
docs/: 接口文档.md
src/: App.vue  main.ts  typed-router.d.ts
src/components/: AppBar.vue  Conversation.vue  DocumentsManage.vue  ModelSelector.vue  MsgAlert.vue  MsgContent.vue  MsgEditor.vue  NavigationDrawer.vue  Prompt.vue  SettingsDialog.vue  UserAvatar.vue  UserFooter.vue  WelcomeCard.vue
src/composables/: states.ts
src/locales/: en.json  zh.json
src/pages/: chat.vue  index.vue  login.vue
src/plugins/: index.ts  vuetify.ts
src/router/: index.ts
src/server/: mock_server.cjs  server.crt  server.key
src/stores/: settings.ts  states.ts
src/types/: markdown-it-katex.d.ts  types.ts
src/utils/: localStorage.ts  request.ts
src/views/: IndexView.vue
(+140 files in other folders)
